--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -72,7 +72,7 @@ h2 {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-m-6 {
         width: 40%;
-
+        font-size: 16px;
         float: left;
         margin-left: 5%;
         margin-bottom: 20px;
