--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -8,7 +8,8 @@
     border: 2px solid black;
     height: 250px;
     position: relative;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .title {
